# quillpaw

./: QUILLPAW_FULL_BUILD_PROMPT.md  README.md  TODO.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: tauri-build.yml
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai_engine.rs  drawing.rs  embeddings.rs  fs_manager.rs  lib.rs  main.rs  models.rs  search.rs  stt_engine.rs  watcher.rs
src-tauri/src/commands/: ai_commands.rs  drawing_commands.rs  fs_commands.rs  mod.rs  search_commands.rs  stt_commands.rs
src/lib/: types.ts
src/lib/components/: AIPanel.svelte  CommandPalette.svelte  ConfirmDialog.svelte  DrawingCanvas.svelte  Editor.svelte  FileTree.svelte  LectureMode.svelte  ProposalCard.svelte  SearchModal.svelte  Settings.svelte  TabBar.svelte  TreeNode.svelte
src/lib/stores/: ai.ts  editor.ts  preferences.ts  stt.ts  ui.ts  vault.ts
src/lib/utils/: markdown.ts  shortcuts.ts  tauri_bridge.ts
