[package]
name = "quillpaw"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-notification = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tantivy = "0.22"
usearch = { version = "2.16", default-features = false }
notify = "6"
walkdir = "2"
gray_matter = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
trash = "3"
uuid = { version = "1", features = ["v4"] }
llama-cpp-2 = "0.1"
whisper-rs = "0.11"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
cpal = "0.15"
rubato = "0.14"
ndarray = "0.15"
wmi = "0.13"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokenizers = "0.15"
tiny-skia = "0.11"